--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
     "name": "app",
     "version": "0.1.0",
-    "homepage": "https://carsonburke.github.io/Quantum-computing-presentation/",
-    "private": true,
+    "homepage": "https://carsonburke.github.io/Greek-Phil-and-Lit/",
+    "private": false,
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
@@ -11,6 +11,7 @@
         "@types/node": "^16.11.42",
         "@types/react": "^18.0.14",
         "@types/react-dom": "^18.0.5",
+        "gh-pages": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
@@ -22,6 +23,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
+        "ghpages": "gh-pages -d build",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build"
     },
